background and characters added hero and enemy

--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,11 @@
 </head>
 
 <body>
-    <p>Hey</p>
-
+    <div id="background">
+        <div id="hero"></div>
+        <div class="enemy"></div>
+    </div>
+    
 
 </body>
 
