--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
     <div id="background">
         <div id="hero"></div>
         <div class="enemy"></div>
+        <div id="missiles"></div>
     </div>
     
 
