--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,9 @@
 <body>
     <div id="background">
         <div id="hero"></div>
-        <div class="enemy"></div>
+        <!-- <div class="enemy"></div> -->
         <div id="missiles"></div>
+        <div id="enemies"></div>
     </div>
     
 
